1. Added the alert on the first time page load of the number recognition system, 2. Also fixed the gap in the display of the prediction display and the buttons in the project on the mobile devices

--- a/number_recognition_system/static/css/styles1.css
+++ b/number_recognition_system/static/css/styles1.css
@@ -698,7 +698,7 @@ img {
 }
 
 #right_section {
-  height: 80vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -767,6 +767,10 @@ img {
     margin-left: 0px;
     margin-top: 0px;
     width: 100%;
+  }
+
+  #right_section {
+  display: block;
   }
 }
 
